JEDIT VERSION HISTORY

* Version 2.3pre6

+ Enhancements

- Plugin Manager now deletes the ZIP files it downloads once they're
  installed
- Plugin Manager now removes plugins better
- If the user properties file changes while jEdit is running, it will
  not be saved on exit (so you can edit your properties from within
  jEdit, etc)
- LatestVersion plugin updates
- Improved commenting commands
- Minor undo improvements
- You can no longer save the caret position to the $ (clipboard)
  register (in previous versions, you could do this but it was
  useless)
- GUIUtilities.showFileDialog() can now accept a null view
  (Dirk Moebius)
- Documentation updates

+ Bug Fixes

- Fixed yet another gutter repaint problem (since 2.3pre5)
- Up/Down arrow keys should be more robust now (since 1.7pre5)
- 'Spaces to Tabs' didn't work (since 2.1pre1!!! From now on, I promise
  I will test jEdit features better :-) )

* Version 2.3pre5

+ New Features

- New 'plugin manager' plugin simplifies plugin removal, updating and
  installation

+ Enhancements

- Options dialog box looks better (Mike Dillon)
- Documentation updates
- API documentation removed (a much better, Java 2-generated version is
  available from the GJT site anyway)
- SGML sources moved into a separate download

+ Bug Fixes

- Options dialog box didn't display 'plugins' branch sometimes (since 2.3pre4)
- Problems would maifest if you selected the buffer list search set but
  didn't actually specify any buffers
- Some files were missing from jedit-sources fileset
- Opening URLs didn't work (since jEdit 2.2pre7)
- The 'Rectangular Selection' action appeared twice in the command list in
  the key binding editor (since 2.3pre2)
- Fixed repaint problems with gutter when splitting/unsplitting (since 2.3pre3)
- Splitting didn't save the caret position (since 2.3pre4)

* Version 2.3pre4

+ New Features

- ViewUpdate.TEXTAREA_DESTROYED message fired when view is being unsplit
- Gutter updates: (Mike Dillon)